# server-dependency

./: .travis.yml  ChangeLog  Makefile.am  NEWS  README  configure.ac
.github/workflows/: build-test.yml
misc/: TODO.txt
src/conf/etc/: Makefile.am  example.server.available.in  example.server.list.in  example.server.unavailable.in  server.list.in
src/man/5/: Makefile.am  server.list.5.man.in
src/man/8/: Makefile.am  dosab.8.man.in  dosab.sh.8.man.in
src/prg/bash/: Makefile.am  dosab.sh.in
src/systemd/: Makefile.am  dosab.service.in
